# stam-m-large-scale-analysis-2024

./: Dockerfile  README.md  pyproject.toml
fleishman_scFv_analysis/src/: data_prep.py  data_prep_tools.py  dim_red.py  dim_red_tools.py  feature_selection.py  feature_selection_tools.py  model_building.py  model_building_tools.py
pdb_af2_structural_analysis/src/clustering/: clustering_af2_str.py  clustering_avg_org.py  clustering_tools.py  computing_tree_distances.py  generalised_rf_tree_dist.R  kmeans_clustering.py  tree_dist.R  tree_dist.py
pdb_af2_structural_analysis/src/data_download/: download_af2_data.py  extract_plddt_score.py
pdb_af2_structural_analysis/src/data_prep/: data_prep.py  data_prep_tools.py
pdb_af2_structural_analysis/src/dim_red/: dim_red_tools.py  pca_analysis.py
pdb_af2_structural_analysis/src/non_redundant_seqs_check/: af2_seqid_organism_checks.py  reading_in_nonredundant_seqs.py
src/analysis/: analysis_tools.py  clustering.py  dim_red.py  exploring_latent_spaces.py  gplvm_analysis.py  outlier_analysis.py  pca_analysis.py
src/clustering/: kmeans_organism_group.py
src/data_download/: download_af2_data.py  download_uniprot_data.py  download_uniprot_data_af2_structures.py  download_uniprot_data_pdb_structures.py
src/data_prep/: af2_destress_data_prep.py  data_prep.py  data_prep_tools.py  extract_uniprot_ids.py  uniprot_af2_data_prep.py  uniprot_data_prep.py  uniprot_pdb_data_prep.py
src/dim_red/: dim_red_tools.py  pca_analysis.py
src/organism_phylo_tree/: organism_phylo_tree.py  organism_phylo_tree_tools.py
(+3 files in other folders)
